# planday-task

./: README.md  dbt_project.yml  docker-compose.yaml  initdata.py  pyproject.toml
data/: .gitignore
macros/: coalesce_counts.sql  count_column_value.sql  sum_counts.sql
models/: schema.yml
models/marts/conversion/: _conversion__models.yml  trial_activation.sql  trial_goals.sql
models/unittests/: test_interactions_pivot.yml
notebooks/: marts_exploratory_analysis.html  marts_exploratory_analysis.ipynb  raw_data_exploratory_analysis.html  raw_data_exploratory_analysis.ipynb
tests/: test_trial_period_timestamps.sql
tests/fixtures/: test_interactions_data.csv
tests/generic/: test_not_negative_count.sql
