[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["stefano.perenzoni"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
dbt-core = "^1.8.7"
dbt-postgres = "^1.8.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
